fix: fix testimonial content overlapping

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,3 @@
-
-/*------------------------------------------Colours*/
-
 /*------------------------------------------Special Paddings/Margins/Text*/
 
 .uppercase {
@@ -82,6 +79,11 @@ hr {
     padding-top: 20px;
     margin-left: -10px;
     background-color:rgba(0, 0, 0, 0.2);
+}
+
+.image img {
+    width: 100%;
+    max-width: 200px;
 }
 
 /*------------------------------------------Heading*/
